setting properties in profiles